--- a/web/index.html
+++ b/web/index.html
@@ -19,18 +19,18 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Junkfood Admin">
+  <meta name="description" content="Junkfood User">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Junkfood Admin">
+  <meta name="apple-mobile-web-app-title" content="Junkfood User">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>Junkfood Admin</title>
+  <title>Junkfood User</title>
   <link rel="manifest" href="manifest.json">
 </head>
 
