Fix Android build, comments overflow and more

--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,6 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Junkfood">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
@@ -31,7 +30,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>template_flutter</title>
+  <title>Junkfood</title>
   <link rel="manifest" href="manifest.json">
 </head>
 
